--- a/FundamentalsAnalyzer.ipynb
+++ b/FundamentalsAnalyzer.ipynb
@@ -633,11 +633,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ticker  year\n",
+       "A       2009    2.905000e+09\n",
+       "        2010    3.691000e+09\n",
+       "        2011    2.185000e+09\n",
+       "        2012    2.362000e+09\n",
+       "        2013    2.699000e+09\n",
+       "        2014    1.663000e+09\n",
+       "        2015    1.655000e+09\n",
+       "        2016    1.912000e+09\n",
+       "AAC     2012             NaN\n",
+       "        2013    4.307500e+07\n",
+       "        2014    2.864100e+07\n",
+       "        2015    1.451410e+08\n",
+       "AAL     2009    1.169700e+10\n",
+       "        2010    1.113600e+10\n",
+       "        2011    8.220000e+09\n",
+       "        2012    8.535000e+09\n",
+       "        2013    1.679900e+10\n",
+       "        2014    1.772000e+10\n",
+       "        2015    2.056100e+10\n",
+       "AAN     2009    5.504400e+07\n",
+       "        2010    4.179000e+07\n",
+       "        2011    1.537890e+08\n",
+       "        2012    1.415280e+08\n",
+       "        2013    1.427040e+08\n",
+       "        2014    6.060820e+08\n",
+       "        2015    6.067460e+08\n",
+       "AAP     2010    2.042710e+08\n",
+       "        2011    3.589040e+08\n",
+       "        2012    6.050880e+08\n",
+       "        2013    1.053584e+09\n",
+       "                    ...     \n",
+       "ZION    2013    2.613923e+09\n",
+       "        2014    1.336505e+09\n",
+       "        2015    1.159353e+09\n",
+       "ZLTQ    2009             NaN\n",
+       "        2010    1.596000e+06\n",
+       "        2011    3.100000e+05\n",
+       "        2012    0.000000e+00\n",
+       "        2013    0.000000e+00\n",
+       "        2014    3.820000e+05\n",
+       "        2015    0.000000e+00\n",
+       "ZNGA    2009             NaN\n",
+       "        2010    0.000000e+00\n",
+       "        2011    0.000000e+00\n",
+       "        2012    1.000000e+08\n",
+       "        2013    0.000000e+00\n",
+       "        2014    0.000000e+00\n",
+       "        2015    0.000000e+00\n",
+       "ZTS     2010             NaN\n",
+       "        2011    5.750000e+08\n",
+       "        2012    5.820000e+08\n",
+       "        2013    3.657000e+09\n",
+       "        2014    3.631000e+09\n",
+       "        2015    4.868000e+09\n",
+       "ZUMZ    2010    0.000000e+00\n",
+       "        2011    0.000000e+00\n",
+       "        2012    0.000000e+00\n",
+       "        2013    6.006000e+06\n",
+       "        2014    4.068000e+06\n",
+       "        2015    0.000000e+00\n",
+       "        2016    0.000000e+00\n",
+       "Name: DEBT, dtype: float64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#objective\n",
     "#Predict 5 year returns with fundamentals\n",
@@ -656,12 +729,42 @@
     "\n",
     "#INDUSTRY EXTRACTOR\n",
     "#https://mktstk.com/2015/03/03/sic-lookup-by-stock-symbol/\n",
-    "results = pd.DataFrame()\n",
-    "pivoted = pd.pivot_table(df, values='value', index=['ticker', 'year'],columns='attributes')\n",
-    "results['AssTurnover']=pivoted['REVENUE']/pivoted['ASSETS']\n",
-    "results\n",
-    "results.to_csv('results.csv')\n",
-    "#df.to_csv(\"fuit.csv\")"
+    "\n",
+    "#df.to_csv(\"fuit.csv\")\n",
+    "pivoted['DEBT']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['ACCOCI', 'ASSETSC', 'ASSETSNC', 'ASSETS', 'BVPS', 'CAPEX',\n",
+       "       'CASHNEQUSD', 'CASHNEQ', 'COR', 'CURRENTRATIO', 'DEBTUSD', 'DEBT',\n",
+       "       'DEPAMOR', 'DE', 'DILUTIONRATIO', 'DPS', 'EBITDAUSD', 'EBITDA',\n",
+       "       'EBITUSD', 'EBIT', 'EBT', 'EPSDIL', 'EPSUSD', 'EPS', 'EQUITYUSD',\n",
+       "       'EQUITY', 'FCFPS', 'FCF', 'GP', 'INTANGIBLES', 'INTEXP', 'INVCAP',\n",
+       "       'INVENTORY', 'LIABILITIESC', 'LIABILITIESNC', 'LIABILITIES',\n",
+       "       'NCFCOMMON', 'NCFDEBT', 'NCFDIV', 'NCFF', 'NCFI', 'NCFO', 'NCFX',\n",
+       "       'NCF', 'NETINCCMNUSD', 'NETINCCMN', 'NETINCDIS', 'NETINC',\n",
+       "       'PAYABLES', 'PB', 'PREFDIVIS', 'RECEIVABLES', 'RETEARN',\n",
+       "       'REVENUEUSD', 'REVENUE', 'RND', 'SGNA', 'SHARESWADIL', 'SHARESWA',\n",
+       "       'TANGIBLES', 'TAXEXP', 'TBVPS', 'WORKINGCAPITAL', 'monthlyReturn',\n",
+       "       'price'], dtype=object)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['attributes'].unique()"
    ]
   },
   {
@@ -1067,42 +1170,45 @@
     }
    ],
    "source": [
-    "metrix = df.groupby(['ticker','year'],as_index=False).count()\n",
-    "metrix = metrix.drop(['attributes','month','value'],axis=1)\n",
-    "metrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['ACCOCI', 'ASSETSC', 'ASSETSNC', 'ASSETS', 'BVPS', 'CAPEX',\n",
-       "       'CASHNEQUSD', 'CASHNEQ', 'COR', 'CURRENTRATIO', 'DEBTUSD', 'DEBT',\n",
-       "       'DEPAMOR', 'DE', 'DILUTIONRATIO', 'DPS', 'EBITDAUSD', 'EBITDA',\n",
-       "       'EBITUSD', 'EBIT', 'EBT', 'EPSDIL', 'EPSUSD', 'EPS', 'EQUITYUSD',\n",
-       "       'EQUITY', 'FCFPS', 'FCF', 'GP', 'INTANGIBLES', 'INTEXP', 'INVCAP',\n",
-       "       'INVENTORY', 'LIABILITIESC', 'LIABILITIESNC', 'LIABILITIES',\n",
-       "       'NCFCOMMON', 'NCFDEBT', 'NCFDIV', 'NCFF', 'NCFI', 'NCFO', 'NCFX',\n",
-       "       'NCF', 'NETINCCMNUSD', 'NETINCCMN', 'NETINCDIS', 'NETINC',\n",
-       "       'PAYABLES', 'PB', 'PREFDIVIS', 'RECEIVABLES', 'RETEARN',\n",
-       "       'REVENUEUSD', 'REVENUE', 'RND', 'SGNA', 'SHARESWADIL', 'SHARESWA',\n",
-       "       'TANGIBLES', 'TAXEXP', 'TBVPS', 'WORKINGCAPITAL', 'monthlyReturn',\n",
-       "       'price'], dtype=object)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['attributes'].unique()"
+    "results = pd.DataFrame()\n",
+    "pivoted = pd.pivot_table(df, values='value', index=['ticker', 'year'],columns='attributes')\n",
+    "\n",
+    "#relevant ratios\n",
+    "\n",
+    "#financial performance\n",
+    "results['ROE'] = pivoted['NETINC']/pivoted['EQUITY']\n",
+    "results['ROA'] = pivoted['EBITDA']*(1-pivoted['TAXEXP']/pivoted['EBT'])/pivoted['ASSETS']\n",
+    "results['ROIC'] = (pivoted['EBIT']*(1-pivoted['TAXEXP']/pivoted['EBT']))/(pivoted['EQUITY']+pivoted['DEBT']-pivoted['CASHNEQ'])\n",
+    "results['FCFEtoEq'] = (pivoted['CF']-pivoted['CAPEX'])/pivoted['EQUITY']\n",
+    "results['FCFFtoOpAss'] = (pivoted['CF']+pivoted['INTEXP']*(1-pivoted['TAXEXP']/pivoted['EBT'])-pivoted['CAPEX'])/pivoted['EQUITY']\n",
+    "\n",
+    "#credibility\n",
+    "results['NOA'] = pivoted['REVENUE']/pivoted['ASSETS']\n",
+    "results['CashAcc'] = pivoted['REVENUE']/pivoted['ASSETS']\n",
+    "results['AssAcc'] = pivoted['REVENUE']/pivoted['ASSETS']\n",
+    "\n",
+    "#Valuation\n",
+    "results['PEdil'] = pivoted['price']/(pivoted['NETINC']/pivoted['SHARESWADIL'])\n",
+    "results['PtoCF'] = pivoted['price']/(pivoted['CF']/pivoted['SHARESWADIL'])\n",
+    "results['PtoBV'] = pivoted['price']/pivoted['BVPS']\n",
+    "results['PtoFCF'] = pivoted['price']/pivoted['FCFPS']\n",
+    "results['mktCap'] = pivoted['price']*pivoted['SHARESWA']\n",
+    "\n",
+    "\n",
+    "#debt\n",
+    "results['DE'] = pivoted['DEBT']/pivoted['EQUITY']\n",
+    "\n",
+    "#operational efficiency\n",
+    "results['CashConvCycle'] = pivoted['REVENUE']/pivoted['ASSETS']\n",
+    "results['AssTurnover'] = pivoted['REVENUE']/pivoted['ASSETS']\n",
+    "\n",
+    "#growth\n",
+    "results['NIg'] = pivoted['REVENUE']/pivoted['ASSETS']\n",
+    "results['BVg'] = pivoted['REVENUE']/pivoted['ASSETS']\n",
+    "results['EBITDAg'] = pivoted['REVENUE']/pivoted['ASSETS']\n",
+    "results['CFg'] = pivoted['REVENUE']/pivoted['ASSETS']\n",
+    "\n",
+    "results.to_csv('results.csv')"
    ]
   },
   {
@@ -1135,40 +1241,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "#relevant ratios\n",
-    "\n",
-    "#financial performance\n",
-    "ROE\n",
-    "ROA\n",
-    "ROIC\n",
-    "FCFEtoEquity\n",
-    "FCFFtoOA\n",
-    "\n",
-    "#credibility\n",
-    "NOA\n",
-    "CashAcc\n",
-    "AssetAcc\n",
-    "\n",
-    "#Valuation\n",
-    "PE\n",
-    "Price2CF\n",
-    "Price2BV\n",
-    "PriceFCF\n",
-    "mktCap\n",
-    "\n",
-    "\n",
-    "#debt\n",
-    "DE\n",
-    "\n",
-    "#operational efficiency\n",
-    "CashConvCycle\n",
-    "\n",
-    "#growth\n",
-    "NIg\n",
-    "BVg\n",
-    "EBITDAg"
-   ]
+   "source": []
   }
  ],
  "metadata": {
